--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -82,8 +82,8 @@
     <!--  DONE TODO: Be sure to include the routing functionality with the correct script files.
                Don't forget that the order of your scripts matters - variables have to be
                declared before you can reference them! -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="/vendor/scripts/page.js"></script>
     <script src="/vendor/scripts/handlebars.js"></script>
     <script src="/vendor/scripts/marked.js"></script>
     <script src="vendor/scripts/highlight.pack.js"></script>
