--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -38,14 +38,16 @@
         <div class="icon-menu"></div>
         <ul>
           <!-- TODO: Refactor the href attributes in the Home and About anchor tags to navigate users to our new client-side routes -->
-          <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
-          <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
+          <li class="tab" data-content="articles"><a href="/articles" class="icon-home"> Home</a></li>
+          <li class="tab" data-content="about"><a href="/about" class="icon-address-book"> About</a></li>
           <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
           <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
         </ul>
       </nav>
     </header>
     <main>
+
+
       <section id="articles" class="tab-content">
         <div>
           <ul id="filters">
@@ -62,6 +64,7 @@
           </ul>
         </div>
       </section>
+
       <section id="about" class="tab-content">
         <header>
           Welcome to my Blog
@@ -75,6 +78,8 @@
           </ul>
         </section>
       </section>
+
+      
     </main>
     <footer>
       &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
